fix nav bar and spacing

--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -4,7 +4,7 @@
   padding-top: 18px !important;
   padding-bottom: 12px !important;
   border-top: black;
-  margin-top: 24px;
+  margin-top: 40px;
 }
 
 .footer-copywright {
