--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -1,21 +1,37 @@
 .row {
-    display: flex;
-    flex-wrap: wrap;
- }
- 
- .row > div[class*='col-'] {
    display: flex;
- }
- 
- .container {
-    height: fit-content;
-    width: 100%;
-    flex-direction: row;
-    flex-wrap: wrap;
- }
+   flex-wrap: wrap;
+}
 
- .home-section {
-    width: 100%;
-    height: 500px;
-    flex-direction: row;
- }
+.row > div[class*='col-'] {
+  display: flex;
+}
+
+.container {
+   height: fit-content;
+   width: 100%;
+   flex-direction: row;
+   flex-wrap: wrap;
+}
+
+.home-section {
+   width: 100%;
+   height: 500px;
+   flex-direction: row;
+}
+
+.containers {
+  width: 25%;
+}
+
+.homepageContainer {
+  width: 100%;
+  height: fit-content;
+  margin-top: 150px;
+  margin-bottom: 150px;
+}
+
+
+.clothe-card {
+  padding: 10px;
+}
